# Astro-Agent-on-Blocksai

./: .gitignore  DOCS.md  README.md  agent-card.json  handler.py  inspect_fits.py  laad02d9q_x1d.fits  pyproject.toml  test_local.py  trigger.py
