[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astro_spectra"
version = "1.0.0"
description = "astro_spectra agent"
requires-python = ">=3.12"
dependencies = [
    "blocks-network",
    "astropy",
    "specutils",
    "numpy",
    "scipy",
    "astroquery",
    "openai",
    "httpx",
    "python-dotenv",
]

[tool.setuptools]
py-modules = ["handler"]
